<resources>
    <string name="app_name">TraveLink</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="email">Email</string>
    <string name="error_internet_title">Error: Internet</string>
    <string name="error_internet_content">The device is not connected to internet. You need an internet connection in order to use the app</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="remember_me">Remember me</string>
    <string name="wrong_credentials">Incorrect username or password</string>
    <string name="incorrect_email">The email is not correct</string>
    <string name="error_login">There was an error when trying to log in</string>
    <string name="error_email_verified">You must confirm the email first</string>
    <string name="error_login_google">There was an error when trying to log in via Google</string>
    <string name="correct_login">Login done successfully</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="agree_privacy_policy">I agree with privacy and policy</string>
    <string name="go_back_to_login">Go back to login</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="different_passwords">Passwords are different</string>
    <string name="incorrect_name">You must introduce a name</string>
    <string name="incorrect_last_name">You must introduce a lastname</string>
    <string name="incorrect_password">The password must contain: 1 number, 1 lowercase, 1 uppercase and a minimum length of 6 characters</string>
    <string name="password_empty">The password field is empty</string>
    <string name="success_account_creation">Verification email has been sent. Please check your mailbox and confirm the account</string>
    <string name="error_account_creation">An error occurred when trying to create the account</string>
    <string name="error_in_data_account">There are some errors in the data introduced. Please fix them</string>
    <string name="error_sign_up_privacy_policy">You must accept the privacy and policy of the app</string>
    <string name="select_your_birthday">Select your birthday</string>
    <string name="send_email">Send email</string>
    <string name="success_email_recover_password">Email has been sent. Plase check your mailbox</string>
    <string name="error_email_recover_password">An error ocurred when trying to send the email</string>
    <string name="error_not_existing_email">The email specified doesn\'t exist</string>
    <string name="recover_your_password">Recover your password</string>
    <string name="trips">Trips</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="current_trips">Current trips</string>
    <string name="past_trips">Past trips</string>
    <string name="no_trips_message">There are no trips in this section. Create a new one now!</string>
    <string name="hello">Hello</string>
    <string name="account_configuration">Account configuration</string>
    <string name="select_profile_image">Select profile image</string>
    <string name="log_off">Log off</string>
    <string name="contact">Contact</string>
    <string name="error_updating_profile_image">An error ocurren when trying to update the profile image</string>
    <string name="success_updating_profile_image">Profile image updated!</string>
    <string name="error_permissions_gallery">You need to accept the permissions in order to select a profile image</string>
    <string name="error_permissions_gallery_settings">You need to accept the permissions from the settings in order to select a profile image</string>
    <string name="create_new_trip">Create a new trip!</string>
    <string name="trip_name">Trip name</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="date_for_trip">Trip date</string>
    <string name="cities">Cities</string>
    <string name="add_city">Add city</string>
    <string name="create_trip">Create trip</string>
    <string name="error_name_trip_empty">You need to introduce a name</string>
    <string name="error_start_date_not_selected">You need to select a start date</string>
    <string name="error_end_date_not_selected">You need to select an end date</string>
    <string name="error_end_date_before_start_date">End date can\'t be before than start date</string>
    <string name="error_max_days_exceeded">A trip cannot last more than 30 days</string>
    <string name="error_cities_not_added">You need to select an end date</string>
    <string name="error_cities_already_added">The city selected is already added</string>
    <string name="error_adding_city">An error occurred when trying to add the city</string>
    <string name="error_cities_max">The maximum of cities is five</string>
    <string name="trip_created">The trip has been created!</string>
    <string name="error_trip_creation">An error occurred when trying to create the trip</string>
    <string name="select_date_trip">Select a date for the trip</string>
    <string name="events">Events</string>
    <string name="map">Map</string>
    <string name="rating">Rating</string>
    <string name="participants">Participants</string>
    <string name="remove_trip">Remove trip</string>
    <string name="expenses">Expenses</string>
    <string name="trip_information">Trip info</string>
    <string name="timeline">Timeline</string>
    <string name="create_event">Create event</string>
    <string name="error_load_trip">An error occurred when trying to load the trip</string>
    <string name="trip_removed_successfully">Trip removed successfully</string>
    <string name="error_trip_removed">An error occurred when removing the trip</string>
    <string name="dialog_remove_trip_title">Remove trip</string>
    <string name="dialog_remove_trip_message">Are you sure you want to remove this trip? You will not be able to get it back</string>
    <string name="trip_photo">Trip photo</string>
    <string name="error_get_trip_photo">An error occurred when getting a photo of the trip place</string>
    <string name="trip_photo_obtained_message">Photo obtained successfully</string>
    <string name="create_new_event">Create a new event!</string>
    <string name="event_name">Name for the event</string>
    <string name="event_date">Date for the event</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="description_field">A brief description of the event, or details to note about it</string>
    <string name="city">City</string>
    <string name="place">Place</string>
    <string name="price">Price</string>
    <string name="error_name_event_empty">You need to introduce a name for the event</string>
    <string name="error_price_event_empty">You need to introduce a price for the event</string>
    <string name="error_start_time_empty">You need to introduce the start time of the event</string>
    <string name="error_end_time_empty">You need to introduce the end time of the event</string>
    <string name="error_end_time_before_start_time">The end time can not be before the start time</string>
    <string name="error_date_event_empty">You need to introduce a date for the event</string>
    <string name="error_place_event_empty">You need to introduce a place for the event</string>
    <string name="event_created">The event has been created!</string>
    <string name="error_event_creation">An error occurred when trying to create the event</string>
    <string name="update_event">Update event</string>
    <string name="event_updated">The event has been updated!</string>
    <string name="error_event_update">An error occurred when trying to update the event</string>
    <string name="error_load_event">An error occurred when trying to load the event</string>
    <string name="no_events_message">There are no events for this trip. Create a new one now!</string>
    <string name="show_location">Show location</string>
    <string name="remove_event">Remove event</string>
    <string name="event_removed_successfully">Event removed successfully</string>
    <string name="error_event_removed">An error occurred when removing the event</string>
    <string name="error_get_event_photo">An error occurred when getting a photo of the event place</string>
    <string name="event_photo_obtained_message">Photo obtained successfully</string>
    <string name="dialog_remove_event_title">Remove event</string>
    <string name="dialog_remove_event_message">Are you sure you want to remove this event? You will not be able to get it back</string>
    <string name="location">Location</string>
    <string name="photo">Photo</string>
    <string name="edit_event">Edit event</string>
    <string name="rate_event">Rate event</string>
    <string name="description">Description</string>
    <string name="error_message_permission_location">You need to enable the location permission in order to show your current location</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="event_selected">Event selected</string>
    <string name="first_event_error">This is the first event</string>
    <string name="last_event_error">This is the last event</string>
    <string name="total_expenses_trip">The total cost of the trip is:</string>
    <string name="events_with_expenses">Events with expenses</string>
    <string name="most_expensive_events">Most expensive events</string>
    <string name="no_trip_expenses_message">This trip doens\'t still have any expense</string>
    <string name="trip_rating">Trip rating</string>
    <string name="rate_this_trip">Please rate this trip</string>
    <string name="rate_this_event">Please rate this event</string>
    <string name="send_rating">Send rating</string>
    <string name="very_bad">Very bad</string>
    <string name="not_good">Not good</string>
    <string name="quite_ok">Quite Ok</string>
    <string name="very_good">Very good</string>
    <string name="excellent">Excellent!</string>
    <string name="rate_trip_success">Trip has been rated!</string>
    <string name="rate_trip_error">An error occurred when trying to rate the trip</string>
    <string name="rate_event_success">Event has been rated!</string>
    <string name="rate_event_error">An error occurred when trying to rate the event</string>
    <string name="telephone_number">Number: 123456789</string>
    <string name="postal_number">Postal code: 13300</string>
    <string name="city_contact">City: Valdepenas</string>
    <string name="update_information">Update information</string>
    <string name="success_update_user_info">Information updated successfully</string>
    <string name="error_update_user_info">An error ocurred when trying to update the information</string>
    <string name="example_trip_name">Trip to Madrid</string>
    <string name="example_date">01/01/2022 – 07/01/2022</string>
    <string name="example_city">Madrid</string>
    <string name="example_day">01/01/2022</string>
    <string name="example_event_name">Science museum</string>
    <string name="example_event_time">12:00 – 14:00</string>
    <string name="example_price">0.00€</string>
</resources>