<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.ui.activities.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middleVerticalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9"
            />

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/sign_up"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            />

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:hint="@string/first_name"
            android:textSize="16sp"
            android:background="@drawable/rectangle_borders_rounded_red"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/textViewSignUp"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintEnd_toEndOf="@id/middleVerticalGuideline"
            />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/last_name"
            android:textSize="16sp"
            android:background="@drawable/rectangle_borders_rounded_red"
            android:layout_marginStart="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toTopOf="@id/editTextFirstName"
            app:layout_constraintBottom_toBottomOf="@id/editTextFirstName"
            app:layout_constraintStart_toStartOf="@id/middleVerticalGuideline"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:hint="@string/email"
            android:textSize="16sp"
            android:background="@drawable/rectangle_borders_rounded_red"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/editTextFirstName"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:hint="@string/password"
            android:textSize="16sp"
            android:background="@drawable/rectangle_borders_rounded_red"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="8dp"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:hint="@string/confirm_password"
            android:textSize="16sp"
            android:background="@drawable/rectangle_borders_rounded_red"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="8dp"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            />

        <CheckBox
            android:id="@+id/checkBoxAgreePrivacyPolicy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/agree_privacy_policy"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="30dp"
            android:textColor="?android:textColorHint"
            app:layout_constraintTop_toBottomOf="@id/editTextConfirmPassword"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintEnd_toStartOf="@id/endGuideline"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:background="@drawable/rectangle_borders_rounded_red_fill"
            android:layout_marginTop="30dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/checkBoxAgreePrivacyPolicy"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            />

        <TextView
            android:id="@+id/txtAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="12dp"
            android:text="@string/already_have_account"
            android:textColor="?android:textColorHint"
            android:layout_alignParentBottom="true"
            app:layout_constraintStart_toStartOf="@id/btnSignUp"
            app:layout_constraintTop_toBottomOf="@id/btnSignUp"
            />

        <TextView
            android:id="@+id/textViewLogIn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="6dp"
            android:layout_marginStart="30dp"
            android:text="@string/log_in"
            android:textColor="?android:colorPrimary"
            android:textStyle="bold"
            android:gravity="center_vertical|center"
            android:clickable="true"
            android:layout_alignParentBottom="true"
            app:layout_constraintStart_toEndOf="@id/txtAlreadyHaveAccount"
            app:layout_constraintTop_toTopOf="@id/txtAlreadyHaveAccount"
            app:layout_constraintBottom_toBottomOf="@id/txtAlreadyHaveAccount"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>