<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.ui.fragments.CreateEventFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middleVerticalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9"
            />


        <TextView
            android:id="@+id/textViewCreateEvent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/create_new_event"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            />

        <EditText
            android:id="@+id/editTextEventName"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:hint="@string/event_name"
            android:textSize="16sp"
            android:background="@drawable/rectangle_borders_rounded_red"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/textViewCreateEvent"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:hint="@string/event_date"
            android:textSize="16sp"
            android:background="@drawable/rectangle_borders_rounded_red"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="8dp"
            android:clickable="false"
            android:focusable="false"
            app:layout_constraintTop_toBottomOf="@id/editTextEventName"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            />

        <EditText
            android:id="@+id/editTextStartTime"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:hint="@string/start_time"
            android:textSize="16sp"
            android:background="@drawable/rectangle_borders_rounded_red"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="8dp"
            android:clickable="false"
            android:focusable="false"
            app:layout_constraintTop_toBottomOf="@id/editTextDate"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            />

        <EditText
            android:id="@+id/editTextEndTime"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:hint="@string/end_time"
            android:textSize="16sp"
            android:background="@drawable/rectangle_borders_rounded_red"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="8dp"
            android:clickable="false"
            android:focusable="false"
            app:layout_constraintTop_toBottomOf="@id/editTextStartTime"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            />

        <Spinner
            android:id="@+id/spinnerCity"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/editTextEndTime"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            />

        <EditText
            android:id="@+id/editTextPlace"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:hint="@string/place"
            android:textSize="16sp"
            android:background="@drawable/rectangle_borders_rounded_red"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="8dp"
            android:clickable="false"
            android:focusable="false"
            app:layout_constraintTop_toBottomOf="@id/spinnerCity"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            />

        <com.cottacush.android.currencyedittext.CurrencyEditText
            android:id="@+id/editTextPrice"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:hint="@string/price"
            android:textSize="16sp"

            android:background="@drawable/rectangle_borders_rounded_red"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="8dp"
            app:currencySymbol="€"
            app:useCurrencySymbolAsHint="true"
            app:maxNumberOfDecimalDigits="2"
            app:layout_constraintTop_toBottomOf="@id/editTextPlace"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            />

        <EditText
            android:id="@+id/editTextEventDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/description_field"
            android:textSize="16sp"
            android:background="@drawable/rectangle_borders_rounded_red"
            android:lines="7"
            android:maxLength="150"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/editTextPrice"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            />

        <Button
            android:id="@+id/btnCreateTrip"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rectangle_borders_rounded_red_fill"
            android:text="@string/create_trip"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@id/editTextEventDescription"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
             />



    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>