<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".presentation.ui.fragments.ExpensesFragment">



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endTopViewGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutInfoExpenses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/endTopViewGuideline"
        android:background="?attr/colorPrimary"
        >

        <TextView
            android:id="@+id/textViewTitleExpenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/total_expenses_trip"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/textViewTotalCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_price"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTitleExpenses"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/constraintLayoutInfoExpenses"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="-50dp"
        android:layout_marginBottom="-50dp"
        app:cardCornerRadius="50dp"
        android:elevation="20dp"


        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/textViewEventsExpenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/most_expensive_events"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewExpenses"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintTop_toBottomOf="@id/textViewEventsExpenses"
                app:layout_constraintBottom_toBottomOf="parent"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>








</androidx.constraintlayout.widget.ConstraintLayout>